# KPI-SCS

./: Cargo.toml  LICENSE  README.md  config.toml  rust-toolchain.toml
Code/: bad_syntax.xai  can_be_finalized.xai  equivalent_forms_example.xai  main.code  main.xai
Code/Tests/: test10.xai  test12.xai  test13.xai  test14.xai  test18.xai  test2.xai  test3.xai  test8.xai
Code/equivalent_forms/: a1.xai  a2.xai  a3.xai  a4.xai  a5.xai  a6.xai  a7.xai  d0.xai  d1.xai  d2.xai  d3.xai  d4.xai  d5.xai
Code/research/: 01.xai  02.xai  03.xai
Docs/: Grammar.md
Lab1/: Cargo.toml  start.sh  tests.sh
Lab1/Tests/: test1.code  test11.code  test15.xai  test16.code  test17.xai  test4.code  test5.xai  test6.xai  test7.xai  test9.code
Lab1/src/: cli.rs  compiler.rs  error.rs  io.rs  main.rs  utils.rs
Lab1/src/compiler/: syntax.rs  tokenizer.rs
Lab2/: Cargo.toml  start.sh
Lab2/src/: cli.rs  compiler.rs  error.rs  logger.rs  main.rs  utils.rs
Lab2/src/compiler/: ast.rs  lexer.rs  parallelizer.rs  simplifier.rs  syntax.rs  tokenizer.rs
Lab2/src/compiler/ast/: balancer.rs  folding.rs  math.rs  transform.rs  tree.rs
Lab3/: Cargo.toml  start.sh
Lab3-4/: Cargo.toml
Lab3-4/src/: compiler.rs  config.rs  main.rs  ui.rs
Lab3-4/src/compiler/: context.rs  syntax.rs
Lab3-4/src/compiler/ast/: balancer.rs  equivalent_forms.rs  folding.rs  transform.rs  tree.rs
Lab3-4/src/compiler/laws/: associative.rs  distributive.rs
Lab3-4/src/ui/: app.rs  context.rs  styles.rs
Lab3-4/src/ui/components/: functions.rs  main.rs
Lab3/src/: cli.rs  compiler.rs  config.rs  context.rs  errors.rs  io.rs  logs.rs  main.rs  ui.rs  utils.rs
Lab3/src/compiler/: context.rs  lexer.rs  syntax.rs  tokenizer.rs
Lab3/src/compiler/ast/: balancer.rs  folding.rs  math.rs  transform.rs  tree.rs
Lab3/src/ui/: app.rs  context.rs  modals.rs
Lab3/src/ui/components/: functions.rs  main.rs  settings.rs  side.rs  side_panel.rs  tabs.rs
Lab5/: Cargo.toml
Lab5-6/: Cargo.toml
Lab5-6/src/: compiler.rs  config.rs  context.rs  logs.rs  main.rs
Lab5-6/src/compiler/: context.rs  pcs.rs  reports.rs  tokenizer.rs
Lab5-6/src/compiler/ast/: equivalent_forms.rs  math.rs  transform.rs  tree.rs
Lab5-6/src/compiler/laws/: distributive.rs
Lab5-6/src/compiler/pcs/: research.rs  vector.rs
Lab5-6/src/ui/components/: functions.rs
Lab5-6/src/ui/modals/: error.rs
Lab5/src/: compiler.rs  io.rs  main.rs
Lab5/src/compiler/: context.rs  lexer.rs
Lab5/src/compiler/laws/: associative.rs
Lab5/src/compiler/pcs/: vector.rs
Lab5/src/ui/: styles.rs
Lab5/src/ui/components/: functions.rs
