[workspace]
resolver = "2"

members = ["Lab1"]

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"

[workspace.lints.clippy]
collapsible_if = "warn"
collapsible_else_if = "warn"
collapsible_match = "warn"
collapsible_str_replace = "warn"
unwrap_used = "deny"

[workspace.lints.rust]
unused_doc_comments = "allow"
unsafe_code = "deny"