[package]
name = "Lab1"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.90"

categories = ["compilers"]
keywords = ["kpi", "compilers"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/KPI-SCS"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
strum_macros = "0.27.2"
thiserror = "2.0.17"