[package]
name = "Lab2"
version = "0.1.0"
authors = ["Sherstiuk Denys"]

edition = "2024"
rust-version = "1.91"

categories = ["compilers"]
keywords = ["kpi", "compilers"]

readme = "../README.md"
license = "MIT"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
fern = "0.7.1"
log = "0.4.28"
strum_macros = "0.27.2"
thiserror = "2.0.17"