[package]
name = "Lab3-4"
version = "0.1.0"

authors = ["Denys Sherstiuk"]

edition = "2024"
rust-version = "1.91.1"

[lints]
workspace = true

[dependencies]
chrono = "0.4.42"
crossbeam = "0.8.4"
egui = "0.33.2"
eframe = { version = "0.33.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
] }
fern = "0.7.1"
log = "0.4.28"
rand = "0.9.2"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.17"
toml = "0.9.8"
