[package]
name = "Lab5-6"
version = "0.0.1"

authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.92"

categories = ["compilers"]
keywords = ["kpi", "compilers"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/KPI-SCS"

[lints]
workspace = true

[dependencies]
chrono = "0.4.42"
crossbeam = "0.8.4"
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
fern = "0.7.1"
log = "0.4.29"
rand = "0.9.2"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.17"
toml = "0.9.8"
